--- a/WeChat.Web/WeChat.Web.csproj
+++ b/WeChat.Web/WeChat.Web.csproj
@@ -135,6 +135,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Client\ApiClient.Menu.cs" />
+    <Compile Include="Client\ApiClient.OAuth2.cs" />
     <Compile Include="Components\CallbackMessage.cs" />
     <Compile Include="Components\Cryptography.cs" />
     <Compile Include="Components\Logger.cs" />
@@ -144,14 +145,16 @@
     <Compile Include="Components\WXBizMsgCrypt.cs" />
     <Compile Include="Controllers\InterfaceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Controllers\Admin\MenuController.cs" />
+    <Compile Include="Controllers\OAuth2Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Components\KeyValuePairsExtensions.cs" />
+    <Compile Include="Components\DictionaryExtensions.cs" />
     <Compile Include="Components\SHA1Hasher.cs" />
     <Compile Include="Models\AccessModel.cs" />
     <Compile Include="Models\MenuModel.cs" />
+    <Compile Include="Models\OAuth2Model.cs" />
     <Compile Include="Models\ReceivingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\DevConfig.cs" />
@@ -163,7 +166,6 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="log4net.config" />
@@ -204,6 +206,7 @@
     <Content Include="Views\Menu\Create.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\OAuth2\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
